Implement a MainWindow and its .ui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(telekinesis)
 
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
 
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 add_subdirectory(src)
