--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,14 @@
-add_executable(telekinesis main.cpp)
+add_executable(telekinesis main.cpp MainWindow.cpp)
 
-target_link_libraries(telekinesis Qt5::Core Qt5::Widgets)
+target_link_libraries(
+  telekinesis
+    Qt5::Core
+    Qt5::Widgets
+)
+
+set_target_properties(
+  telekinesis
+    PROPERTIES 
+      AUTOUIC ON
+      AUTOMOC ON
+)
