--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
 find_package(PkgConfig REQUIRED)
 
 pkg_search_module(GUPNP REQUIRED gupnp-1.0)
+pkg_search_module(GUPNP_AV REQUIRED gupnp-av-1.0)
 pkg_search_module(GOBJECT REQUIRED gobject-2.0)
 pkg_search_module(GSSDP REQUIRED gssdp-1.0)
 
